--- a/index.html
+++ b/index.html
@@ -7,9 +7,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Assignment-2 projects</title>
     <link rel="stylesheet" href="Styles/style.css">
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/82f9429745.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- start header section with nav bar  -->
+    <header>
+        <nav>
+            <div class="menu-bar">
+                <span>
+                    <h4 style="font-size: 24px;">Influencer products</h4>
+                </span>
+                <span>
+                    <a href="">Home</a>
+                    <a href="">Products</a>
+                    <a href="">Sign Up</a>
+                    <a href="">Login</a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                    <a href=""><i class="fas fa-shopping-cart"></i></a>
+                </span>
+            </div>
+        </nav>
+
+        <!-- Main section of this projects  -->
+        <section class="influener-container">
+            <div class="infulence-title-container">
+                <h1 class="influence-title">Start your Journey as Influencer</h1>
+                <p>Hi i am professional influencer of bangladesh. Also i am a sooting director in bangladesh film
+                    industry..</p>
+                <button class="info-btn">Preebook now <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="infulence-img-container">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </section>
+    </header>
+
+    <!---------------------------------
+                         logo section start in here-------------------- -->
+    <section class="logo-containe">
+        <div class="logos">
+            <div class="logo">
+                <img src="logos/Alibaba.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Amazon.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Ebay.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Rakuten.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Target.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!---------------------------------
+                    Populer section start-- ------------------- ---->
+
+    <section class="populer-container">
+        <div class="populers">
+            <div class="populer">
+                <img src="images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+            </div>
+            <div class="populer">
+                <img src="images/mic.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/airpod.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/drone.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/lights.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/setup.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/single-light.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/lights.png" alt="">
+            </div>
+            <div class="populer">
+                <img src="images/action.png" alt="">
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
