last commit added

--- a/index.html
+++ b/index.html
@@ -76,37 +76,157 @@
                     Populer section start-- ------------------- ---->
 
     <section class="populer-container">
+        <h2 class="populer-title">Popular Collection</h2>
         <div class="populers">
             <div class="populer">
                 <img src="images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
+                <h3>Flex Tripod</h3>
+                <h3>$50.48</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
             </div>
             <div class="populer">
                 <img src="images/mic.png" alt="">
+                <h3>microphone</h3>
+                <h3>$120.25</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Microphone is the most powerfull items of any sooting or any program.</p>
             </div>
             <div class="populer">
                 <img src="images/airpod.png" alt="">
+                <h3>Airbuds</h3>
+                <h3>$100.00</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Airbuds is the most populer items right now in the worlds.</p>
             </div>
             <div class="populer">
                 <img src="images/drone.png" alt="">
+                <h3>Drone</h3>
+                <h3>$980.25</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Drons are also most populer items in the worlds. </p>
             </div>
             <div class="populer">
                 <img src="images/lights.png" alt="">
+                <h3>Light Setup</h3>
+                <h3>$1200.00</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Lights are most powerful elements are any photoshhot or any events</p>
+
             </div>
             <div class="populer">
                 <img src="images/setup.png" alt="">
+                <h3>Photoshoot set</h3>
+                <h3>$820.40</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Photoshoot set is also are most powerfull elements and most beutiful item.</p>
+            </div>
+            <div class="populer">
+                <img src="images/camera.png" alt="">
+                <h3>Vlogging Camera</h3>
+                <h3>$1800.80</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>This is vloging camera and its are most usefull items right now.</p>
             </div>
             <div class="populer">
                 <img src="images/single-light.png" alt="">
-            </div>
-            <div class="populer">
-                <img src="images/lights.png" alt="">
+                <h3>Green Screen</h3>
+                <h3>$25.48</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Single light are most important elements in digital world.</p>
             </div>
             <div class="populer">
                 <img src="images/action.png" alt="">
+                <h3>Action Camera</h3>
+                <h3>$380.00</h3>
+                <p class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <span style="color: black;">
+                        4.99
+                    </span>
+                </p>
+                <p>Action camara are most important camara in the world.</p>
             </div>
-        </div>
 
+        </div>
+        <p class="see-more"><a href="">See More <span><i class="fas fa-arrow-right"></i></span></a></p>
     </section>
 
 </body>
