--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <section class="influener-container">
             <div class="infulence-title-container">
                 <h1 class="influence-title">Start your Journey as Influencer</h1>
-                <p>Hi i am professional influencer of bangladesh. Also i am a sooting director in bangladesh film
+                <p style="font-weight:400px ;">Hi i am professional influencer of bangladesh. Also i am a sooting
+                    director
+                    in bangladesh film
                     industry..</p>
                 <button class="info-btn">Preebook now <i class="fas fa-arrow-right"></i></button>
             </div>
@@ -228,7 +230,40 @@
         </div>
         <p class="see-more"><a href="">See More <span><i class="fas fa-arrow-right"></i></span></a></p>
     </section>
-
+    <!-- Customer feedback section  -->
+    <section class="customer-feedback-container">
+        <div class="feedback-container">
+            <div class="customer-feedback">
+                <h3>Free 24/7</h3>
+                <h4>Support Team</h4>
+            </div>
+            <div class="customer-feedback">
+                <h3>Ready Solutions</h3>
+                <h4>For Business</h4>
+            </div>
+            <div class="customer-feedback">
+                <h3>Premium</h3>
+                <h4>Quality</h4>
+            </div>
+            <div class="customer-feedback">
+                <h3>1 200 000+</h3>
+                <h4>Satisfied Customers</h4>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-section">
+            <h3 style="font-size: 24px;">Influencer products</h3>
+            <p><small>Copyright © 2022 influencer products</small></p>
+            <small>All rights reserved</small>
+            <p>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-google"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-youtube"></i></a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
