--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="seecial-offer-container">
+            <div class="offer-content">
+                <h2 style="color: #3A3A3A; font-size: 38px;">Special Offer Products</h2>
+                <p>This is hot products for this week. this is most celling products. if you want to by this products
+                    This is hot products for this week. this is most celling products. if you want to by this products
+                    This is hot products for this week. this is most celling products. if you want to by this products
+                    and get discunts please click on below link...</p>
+                <button class="info-btn">Book Now <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="offer-container">
+                <img style="width: 480px; height: 380px;" src="images/offer.jpg" alt="">
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer-section">
             <h3 style="font-size: 24px;">Influencer products</h3>
