last commit done

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="offer-section">
         <div class="seecial-offer-container">
             <div class="offer-content">
                 <h2 style="color: #3A3A3A; font-size: 38px;">Special Offer Products</h2>
