--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     director
                     in bangladesh film
                     industry..</p>
-                <button class="info-btn">Preebook now <i class="fas fa-arrow-right"></i></button>
+                <button target="_blank" class="info-btn">Preebook now <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="infulence-img-container">
                 <img src="images/main-camera.png" alt="">
@@ -232,6 +232,8 @@
     </section>
     <!-- Customer feedback section  -->
     <section class="customer-feedback-container">
+        <h2 style="text-align: center;   font-size: 28px;
+        color: #3A3A3A;">Customer Feedback Protal</h2>
         <div class="feedback-container">
             <div class="customer-feedback">
                 <h3>Free 24/7</h3>
