--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section class="populer-container">
         <h2 class="populer-title">Popular Collection</h2>
-        <div class="populers">
+        <article class="populers">
             <div class="populer">
                 <img src="images/tripod.png" alt="">
                 <h3>Flex Tripod</h3>
@@ -227,7 +227,7 @@
                 <p>Action camara are most important camara in the world.</p>
             </div>
 
-        </div>
+        </article>
         <p class="see-more"><a href="">See More <span><i class="fas fa-arrow-right"></i></span></a></p>
     </section>
     <!-- Customer feedback section  -->
@@ -264,7 +264,7 @@
                 <button class="info-btn">Book Now <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="offer-container">
-                <img style="width: 480px; height: 380px;" src="images/offer.jpg" alt="">
+                <img style="width: 480px; height: 380px;" src="images/offer.png" alt="">
             </div>
         </div>
     </section>
